# MandelFarmGigaBrot

./: .gitignore  CMakeLists.txt  README.md
apps/mandel-bench/: main.c
apps/mandel-render/: main.c
docs/adr/: 0001-start-local-first.md
docs/architecture/: project-structure.md
docs/backlog/: Planejamento_P5.md  pilot-zero.md
docs/benchmarks/: README.md  p5-008-methode-local.md
docs/benchmarks/results/: methode-node-report.json  methode-thread-sweep-bands-hard.json  methode-thread-sweep-tiles32-hard.json  methode-thread-sweep-tiles64-hard.json  methode-tile-grid-hard.json  methode-tile-sweep-hard-threads10.json
examples/: mandelbrot_demo.c
include/: mandel_core.h  mandel_palette.h  mandel_render.h  mandel_types.h
src/: mandel_core.c  mandel_palette.c  mandel_render.c
tests/unit/: test_mandel_core.c  test_mandel_palette.c  test_mandel_render.c  test_mandel_types.c
